--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helpers/Helpers.php"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4"
